fix unresponsive on smaller devices

--- a/src/components/GalleryTile.css
+++ b/src/components/GalleryTile.css
@@ -5,3 +5,7 @@
     height: 200px;
     width: 200px;
 }
+.gallery-tile--video {
+    min-height: 100%;
+    min-width: 100%;
+}
